feature: save catalog with image